--- a/style.css
+++ b/style.css
@@ -54,3 +54,37 @@ nav ul li a {
         
     }
 }
+
+.msg {
+    font-family: monospace;
+    margin-top: 15px;
+    text-align: center;
+}
+
+.msg h4 {
+    margin-top: 10px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.container > div {
+    border: 1px solid black;
+    border-radius: 10%;
+    height: 70vh;
+    width: 30%;
+    text-align: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+    &:hover{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+}
+
+.container div h2 {
+    margin-top: 15px;
+}
