--- a/style.css
+++ b/style.css
@@ -137,3 +137,9 @@ nav ul li a {
     box-shadow: none;
     transform: translateY(0);
 }
+
+@media only screen and (min-width: 1600px) {
+    .button-28 {
+        margin-top: 450px;
+    }
+}
