--- a/style.css
+++ b/style.css
@@ -75,10 +75,13 @@ nav ul li a {
 .container > div {
     border: 1px solid black;
     border-radius: 10%;
-    height: 70vh;
+    height: auto;
     width: 30%;
     text-align: center;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     &:hover{
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -117,10 +120,10 @@ nav ul li a {
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    width: 25vh;
     will-change: transform;
     width: 80%;
     max-width: 250px;
+    align-self: center;
 }
 .button-28:disabled {
     pointer-events: none;
@@ -136,6 +139,18 @@ nav ul li a {
 .button-28:active {
     box-shadow: none;
     transform: translateY(0);
+}
+
+@media only screen and (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container > div {
+        width: 90%;
+        margin-bottom: 20px;
+    }
 }
 
 @media only screen and (min-width: 1600px) {
