--- a/catfct.css
+++ b/catfct.css
@@ -14,7 +14,8 @@ body {
     border: 1px solid black;
     border-radius: 10%;
     height: 70vh;
-    width: 30%;
+    width: 90%;
+    max-width: 500px;
     text-align: center;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
@@ -50,7 +51,7 @@ body {
     font-size: 13px;
     font-weight: 400;
     line-height: 1.15385;
-    margin-top: 280px;
+    margin-top: 250px;
     outline: none;
     padding: 8px .8em;
     position: relative;
@@ -78,3 +79,29 @@ body {
     box-shadow: none;
     color: #2c5777;
   }
+
+  @media (max-width: 768px) {
+    .container {
+        margin-top: 50px;
+    }
+
+    .container > div {
+        height: 80vh; 
+        width: 95%; 
+    }
+
+    .button-8 {
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 480px) {
+    .button-8 {
+        font-size: 12px;
+        padding: 6px .6em;
+    }
+
+    .fact {
+        height: auto;
+    }
+}
