--- a/math.css
+++ b/math.css
@@ -50,7 +50,7 @@ body {
     font-size: 13px;
     font-weight: 400;
     line-height: 1.15385;
-    margin-top: 260px;
+    margin-top: 250px;
     outline: none;
     padding: 8px .8em;
     position: relative;
@@ -77,4 +77,30 @@ body {
     background-color: #a0c7e4;
     box-shadow: none;
     color: #2c5777;
+}
+
+@media (max-width: 768px) {
+    .container {
+        margin-top: 50px;
+    }
+
+    .container > div {
+        height: 80vh; 
+        width: 95%; 
+    }
+
+    .button-8 {
+        margin-top: 150px;
+    }
+}
+
+@media (max-width: 480px) {
+    .button-8 {
+        font-size: 12px;
+        padding: 6px .6em;
+    }
+
+    .math {
+        height: auto;
+    }
 }
