--- a/style.css
+++ b/style.css
@@ -170,7 +170,8 @@ body {
     font-size: 16px;
     font-weight: 600;
     line-height: normal;
-    margin-top: 300px;
+    margin-top: 280px;
+    margin-bottom: 20px;
     min-height: 60px;
     min-width: 0;
     outline: none;
